# financial-timeseries-forecasting

./: config.py  main.py  presentation.md  pyproject.toml  relatorio.md  requirements.txt
notebooks/: RNN_Experiments.ipynb  RNN_Session02_Experiments.ipynb  RNN_Session02_Script01_Filtragem.ipynb  RNN_Session02_Script02_Normalizao.ipynb  RNN_Session02_Script03_CarregamentoDados.ipynb  RNN_Session02_Script04_RedeTreino.ipynb  RNN_Session02_Unified.ipynb
src/: data_loader.py  filtering.py  model.py  normalization.py
